--- a/package.json
+++ b/package.json
@@ -3,24 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "server": "node server",
+    "frontend": "next dev",
+    "dev": "run-p server frontend",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.30.1",
+    "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "eslint-config-next": "14.2.2",
+    "express": "^4.19.2",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8",
+    "request": "^2.88.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
